<resources>
    <string name="app_name">Vocaby</string>
    <string name="search_hint">Look up an entry&#8230;</string>
    <string name="nav_search">Dictionary</string>
    <string name="nav_saves">Saves</string>
    <string name="nav_profile">Profile</string>
    <string name="unsave_button_desc">unsave</string>
    <string name="no_definition_found">No definition found</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="refresh_button">Refresh Button</string>
    <string name="close">close</string>
    <!-- Strings used for fragments for navigation -->

    <string name="notifications">Notifications</string>
    <string name="add_dictionary_entry">New Entry</string>
    <string name="definition_add_alert">You must add a definition</string>
    <string name="example_header">Example</string>
    <string name="type_header_alert">Please select a type</string>
    <string name="definition_header_singular">Definition</string>
    <string name="definition_header_plural">Definitions</string>
    <string name="nav_close">Close</string>
    <string name="add_definition_button">Add Definition</string>
    <string name="update_definition_button">Update Definition</string>
    <string name="nav_save">Save</string>
    <string name="collection_save">Save To Collections</string>
    <string name="collection_update">Update Collections</string>
    <string name="custom_definition_group_header">Definition Groups</string>
    <string name="custom_group_add_button">Add a group</string>
    <string name="create">Create</string>
    <string name="create_group">Add Group</string>
    <string name="custom_definition_add_button">Add a definition</string>
    <string name="drag_icon">drag icon</string>
    <string name="entry_edit_hint">Enter your new entry…</string>
    <string name="group_header_alert">Please add a group</string>
    <string name="dictionary_header">Vocaby Dictionary</string>
    <string name="original">ORIGINAL</string>
    <string name="custom">CUSTOM</string>
    <string name="entry">entry</string>
    <string name="empty_history">Empty history</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_support">Support</string>
    <string name="nav_danger_zone">Danger Zone</string>
    <string name="empty_custom_dictionary">Empty Custom Dictionary</string>
    <string name="drag_to_rearrange">Drag to rearrange</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="enter_a_pronunciation">Enter a pronunciation</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="back">Back</string>
    <string name="data_management_export_save_backup">Export my save data as json</string>
    <string name="data_management_export_entry_backup">Export my entry data as json</string>
    <string name="data_management_import_save">Import save backup data from json</string>
    <string name="data_management_import_entry">Import entry backup data from json</string>
    <string name="data_transfer_importing">Importing your backup data…</string>
    <string name="data_transfer_export_complete">Successfully exported your data!</string>
    <string name="data_transfer_import_complete">Successfully imported your data!</string>
    <string name="data_transfer_fetching_data">Fetching your data…</string>
    <string name="data_transfer_exporting_saves">Exporting your save data…</string>
    <string name="data_transfer_reading_import">Reading your backup data…</string>
    <string name="data_transfer_export_empty">You don\'t have any data to export…</string>
    <string name="data_transfer_import_error_generic">Failed to import…</string>
    <string name="data_transfer_import_error_invalid_file">Failed to import: file is invalid…</string>
    <string name="data_transfer_import_error_wrong_backup_file">Failed to import: backup file is invalid…</string>
    <string name="danger_clear_chart">Delete Chart Data</string>
    <string name="danger_clear_search_history">Delete Search History</string>
    <string name="danger_clear_saves">Delete Saves</string>
    <string name="danger_clear_custom_entries">Delete Custom Entries</string>
    <string name="danger_erase_all_data">Delete All Data</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="data_export">Export Data</string>
    <string name="data_import">Import Backup Data</string>
    <string name="data_management_import_warning">Warning: Imports overwrite existing data. Your current saves or entries will be replaced.</string>
    <string name="history">Search History</string>
    <string name="eod">Entry of the Day</string>
    <string name="wod_our_pick">Vocaby\'s Pick</string>
    <string name="wod_random_pick">Random Pick</string>
    <string name="entry_header">Entry</string>
    <string name="create_a_new_entry">Add a new entry</string>
    <string name="create_a_new_group">Add a new group</string>
    <string name="create_a_definition">Add a new definition</string>
    <string name="update_a_definition">Update a definition</string>
    <string name="chart_header">Frequently Searched</string>
    <string name="chart_placeholder_alert">Need more data</string>
    <string name="chart_placeholder_fetching">Fetching your data…</string>
    <string name="chart_placeholder_error">Something went wrong…</string>
    <string name="enter_a_definition">Enter a definition</string>
    <string name="enter_an_example_sentence">Enter an example sentence</string>
    <string name="help">Help</string>
    <string name="card_instructions">Card Instructions</string>
    <string name="touch_to_edit">Touch to edit</string>
    <string name="chart_toggle_monthly">Monthly</string>
    <string name="chart_toggle_all">All</string>
    <string name="support_faq">Frequently Asked Questions</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_body">If you couldn’t find the answer you were looking for or just want send us some feedback, feel free to contact us! We will try our best to get back to you.</string>
    <string name="vocaby_email">help@vocaby.app</string>
    <string name="support_vocaby">Help us improve Vocaby</string>
    <string name="support_vocaby_body">We are constantly trying to improve Vocaby. If you would like us to update an entry or add a feature, submit this form!</string>
    <string name="submit_feedback">Send Feedback</string>
    <string name="enter_your_feedback">Select a feedback type</string>
    <string name="enter_your_feedback_message">Enter your feedback message here</string>
    <string name="data_privacy">Data Privacy</string>
    <string name="data_privacy_header">Share Crash Analytics</string>
    <string name="data_privacy_content">When enabled, you are opting in to share error related data with Vocaby. </string>
    <string name="data_privacy_warning">Warning: You must restart the app for the change to take effect</string>
    <string name="feedback_input_alert_type">You must select a type</string>
    <string name="feedback_input_alert_email">Please enter a valid email</string>
    <string name="feedback_input_alert_thankyou">Thank you!</string>
    <string name="feedback_input_alert_message">Please enter a feedback</string>
    <string name="feedback_input_email">Your Email (optional)</string>
    <string name="connections_switch_header">Automatically Update Definitions</string>
    <string name="connections_switch_body">When enabled, Vocaby will check and update entries that you search.</string>
    <string name="connections">Connections</string>
    <string name="search_custom_entry_hint">Filter entries…</string>
    <string name="notification_toggle_header">Get Saves Notification</string>
    <string name="notification_toggle_body">Get notified of the entries that you saved for periodic review.</string>
    <string name="notification_frequency_header">Notification Frequency</string>
    <string name="notification_priority_header">Notification Importance</string>
    <string name="notification_options_header">Additional options in system settings</string>
    <string name="notification_save_collection">Save Collection</string>
    <string name="data_transfer">Data Transfer</string>
    <string name="collection_name_header">Collection Name</string>
    <string name="collection_count_text">Saved</string>
    <string name="add_save_collection">NEW COLLECTION</string>
    <string name="empty_collection">Empty Collection</string>
    <string name="add_a_save_collection">Add a save collection</string>
    <string name="new_collection_hint">Enter your collection name…</string>
    <string name="snackbar_collection_action">Add to collection</string>
    <string name="save_to_your_collections">Save to…</string>
    <string name="custom_entry_edit">Edit this custom entry</string>
    <string name="custom_entry_delete">Delete this custom entry</string>
    <string name="actions">Actions</string>
    <string name="update_entry">Update Entry</string>
    <string name="update_collection">Update Collection</string>
    <string name="collection_rename">Rename this collection</string>
    <string name="collection_delete">Delete this collection</string>
    <string name="collection_update_name">Update collection name</string>
    <string name="all_saves">Saves</string>
    <string name="collections">Collections</string>
    <string name="empty_saves">No Saved Entry</string>
    <string name="empty_collections">No Save Collection</string>
    <string name="remove_save">Remove Save</string>
    <string name="entry_type_management">Type Management</string>
    <string name="add_type">Add type</string>
    <string name="definition_group_type">Definition Group Type</string>
    <string name="type_create_hint">Enter a type or part of speech…</string>
    <string name="add_a_new_type">Add a new type</string>
    <string name="reset_entry_types">Reset Entry Types</string>
    <string name="update_notification">Update Notification</string>
    <string name="notification_alert">Please pick an option</string>
    <string name="cancel">Cancel</string>
    <string name="danger_clear_save_collections">Delete Save Collections</string>
    <string name="empty_definition_group">Empty Definition Group</string>
    <string name="empty">Empty</string>
    <string name="dash">-</string>
    <string name="custom_entries">Custom Entries</string>
    <string name="chart_dictionary_data">Search Statistic</string>
    <string name="user_saves">User Saves</string>
    <string name="user_entries">User Entries</string>
    <string name="loading_data">Loading data…</string>
    <string name="description">Description</string>
    <string name="add_entry">Add Dictionary Entry</string>
    <string name="edit_dictionary">Edit Dictionary</string>
    <string name="custom_dictionary">Custom Dictionary</string>
    <string name="no_previous_selection">No Previous Selection</string>
    <string name="picking_an_entry">Picking an entry…</string>
    <string name="previous_selection">Previously Picked</string>
    <string name="zero">0</string>
    <string name="search">Search</string>
    <string name="slash">/</string>
</resources>