<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/dictionaryFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search"
            android:checked="true"/>

        <item
            android:id="@+id/customEntryFragment"
            android:icon="@drawable/ic_entry"
            android:title="@string/nav_custom_entries" />

        <item
            android:id="@+id/savesFragment"
            android:icon="@drawable/nav_saves"
            android:title="@string/nav_saves" />

        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
    </group>
</menu>