<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.profile.DataManagementFragment">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="@dimen/container_gap_margin"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/container_gap_margin"
        android:drawableStart="@drawable/ic_arrow_left_tail"
        android:drawableTint="@color/dark_gray"
        android:text="@string/back"
        android:textColor="@color/dark_gray"
        android:drawablePadding="12dp"
        android:fontFamily="@font/sourcesanspro_semibold" />
    <TextView
        style="@style/Theme.VocabyAndroid.TextHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/container_side_margin"
        android:paddingEnd="@dimen/container_side_margin"
        android:paddingBottom="8dp"
        android:text="@string/data_export" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/export_save_button"
        style="@style/Theme.VocabyAndroid.ProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_management_export_save_txt"
        android:drawableStart="@drawable/ic_boxed_export"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/export_save_backup_button"
        style="@style/Theme.VocabyAndroid.ProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_management_export_save_backup"
        android:drawableStart="@drawable/ic_boxed_export"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/export_entries_button"
        style="@style/Theme.VocabyAndroid.ProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_management_export_entry"
        android:drawableStart="@drawable/ic_boxed_export"/>
    <TextView
        style="@style/Theme.VocabyAndroid.TextHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/container_side_margin"
        android:paddingStart="@dimen/container_side_margin"
        android:paddingEnd="@dimen/container_side_margin"
        android:text="@string/data_import" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="@dimen/container_side_margin"
        android:paddingEnd="@dimen/container_side_margin"
        android:text="@string/data_management_import_warning" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/import_saves_button"
        style="@style/Theme.VocabyAndroid.ProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_management_import_save"
        android:drawableStart="@drawable/ic_boxed_import"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/import_entries_button"
        style="@style/Theme.VocabyAndroid.ProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_management_import_entry"
        android:drawableStart="@drawable/ic_boxed_import"/>
</LinearLayout>