<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/nav_header"
        android:padding="@dimen/nav_header_padding">
        <TextView
            android:id="@+id/definition_dialog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:text="@string/create_a_definition"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/container_side_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                style="@style/Theme.VocabyAndroid.TextHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/dark_gray"
                android:text="@string/definition_header_singular" />

            <TextView
                style="@style/Theme.VocabyAndroid.Alert"
                android:id="@+id/definition_header_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/definition_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_box"
            android:fontFamily="@font/sourcesanspro_regular"
            android:hint="@string/enter_a_definition"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp" />

        <TextView
            style="@style/Theme.VocabyAndroid.TextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            android:text="@string/example_header" />

        <EditText
            android:id="@+id/example_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_an_example_sentence"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:padding="12dp"
            android:inputType="text"
            android:fontFamily="@font/sourcesanspro_regular"
            android:background="@drawable/text_input_box"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_definition_button"
            style="@style/Theme.VocabyAndroid.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/container_side_margin"
            android:text="@string/add_definition_button" />
    </LinearLayout>
</LinearLayout>