<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature_profile.presentation.setting.SettingFragment"
    android:orientation="vertical"
    android:background="@color/white">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="@dimen/container_side_margin"
        android:paddingEnd="@dimen/container_side_margin"
        android:background="@drawable/box_white_bottom_stroke_gray">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            style="@style/Theme.VocabyAndroid.NavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_chevron_left"
            android:text="@string/back"
            android:layout_marginStart="-8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_semibold"
            android:text="@string/nav_setting"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/container_side_margin"
            android:paddingBottom="@dimen/container_side_margin"
            android:orientation="vertical">
            <TextView
                style="@style/Theme.VocabyAndroid.TextHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/container_side_margin"
                android:paddingEnd="@dimen/container_side_margin"
                android:text="@string/notifications" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_gap"
                android:paddingBottom="@dimen/header_gap"
                android:layout_marginStart="@dimen/container_side_margin"
                android:layout_marginEnd="@dimen/container_side_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sourcesanspro_semibold"
                        android:text="@string/notification_toggle_header"
                        android:textColor="@color/colorPrimaryAccent"
                        android:textSize="14sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:scrollbars="none"
                        android:text="@string/notification_toggle_body"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                </LinearLayout>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:layout_marginStart="@dimen/container_gap_margin"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
            <com.vocaby.vocabywidgets.DescriptiveButtonView
                android:id="@+id/notification_collection_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:headerText="@string/notification_save_collection"
                app:descriptionText="All Saves"
                app:headerColor="@color/button_header_color"
                app:descriptionColor="@color/button_description_color" />
            <com.vocaby.vocabywidgets.DescriptiveButtonView
                android:id="@+id/notification_frequency_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:headerText="@string/notification_frequency_header"
                app:descriptionText="15 minutes"
                app:headerColor="@color/button_header_color"
                app:descriptionColor="@color/button_description_color" />
            <TextView
                style="@style/Theme.VocabyAndroid.TextHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/container_side_margin"
                android:paddingStart="@dimen/container_side_margin"
                android:paddingEnd="@dimen/container_side_margin"
                android:text="@string/connections" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_gap"
                android:paddingBottom="@dimen/header_gap"
                android:layout_marginStart="@dimen/container_side_margin"
                android:layout_marginEnd="@dimen/container_side_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sourcesanspro_semibold"
                        android:text="@string/connections_switch_header"
                        android:textColor="@color/colorPrimaryAccent"
                        android:textSize="14sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:scrollbars="none"
                        android:text="@string/connections_switch_body"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                </LinearLayout>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/connections_switch"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/container_gap_margin"

                    android:layout_height="match_parent"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
            <TextView
                style="@style/Theme.VocabyAndroid.TextHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/container_side_margin"
                android:paddingStart="@dimen/container_side_margin"
                android:paddingEnd="@dimen/container_side_margin"
                android:text="@string/data_privacy" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingTop="@dimen/header_gap"
                android:paddingStart="@dimen/container_side_margin"
                android:paddingEnd="@dimen/container_side_margin"
                android:text="@string/data_privacy_warning" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/header_gap"
                android:paddingBottom="@dimen/header_gap"
                android:layout_marginStart="@dimen/container_side_margin"
                android:layout_marginEnd="@dimen/container_side_margin"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sourcesanspro_semibold"
                        android:text="@string/data_privacy_header"
                        android:textColor="@color/colorPrimaryAccent"
                        android:textSize="14sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:scrollbars="none"
                        android:text="@string/data_privacy_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                </LinearLayout>
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/data_share_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/container_gap_margin"

                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>